--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Erkanderon</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -16,6 +16,14 @@
   <link rel="stylesheet" href="homePage/home-style.css">
   <link rel="stylesheet" href="portfolio/portfolio.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <style>
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+      width: 38%;
+      margin: auto;
+    }
+  </style>
 </head>
 <body>
 
@@ -36,7 +44,7 @@
           <a href="#/portfolio" class="home2">Portfolio</a>
         </div>
         <div class="div1">
-          <a href="" class="home2">CV</a>
+          <a href="#/cv" class="home2">CV</a>
         </div>
       </div>
     </div>
@@ -88,6 +96,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/bootstrap/js/carousel.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="components/version/version.js"></script>
