--- a/homePage/home-page-template.html
+++ b/homePage/home-page-template.html
@@ -13,14 +13,15 @@
                 <img class="img-responsive img-circle" src="photos/linux3.png">
             </div>
             <div class="col-lg-20  col-xs-6">
-                <div class="clear">
+
                 </div>
                 <p class="myself">
-                    Hi, I am <strong style="color: rgb(64, 75, 76);">Hüseyin Erkan Çetinkaya</strong>. I'm studying at Muğla University in Turkey.
-                    I'm good at web and mobile developing. I love open source world and share my experiences
-                    with other developers. I'm believing that sharing experiences is helpful for humanity.
-                    Also playing with Github projects is a part of my life. I'm trying to improve my coding skills and
-                    watch the latest Technologies to be stay up to date.
+                    Hi, I am <strong style="color: rgb(64, 75, 76);">Hüseyin Erkan Çetinkaya</strong>. I'm graduated from Muğla University Computer Engineering Department in Turkey.
+                    I took part in a web-based development and mobile developing.
+                    Making researches from Github projects is my food, try to work with these projects is my drink.
+                    I believe that sharing experiences with other developers brings a bigger world.
+                    I'm trying to improve my coding skills and watch the Technology news to be stay up to date.
+                    Linux, Python, Javascript is indispensable concepts for me.
                 </p>
             </div>
 
