--- a/CV/CV.html
+++ b/CV/CV.html
@@ -10,15 +10,16 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="photos/cv.jpg" alt="Chania">
+            <img class="navbor" src="photos/cv.jpg" alt="Chania">
         </div>
 
         <div class="item">
-            <img src="photos/cv2.jpg" alt="Chania">
+            <img class="navbor" src="photos/cv2.jpg" alt="Chania">
         </div>
 
         <div class="item">
-            <img src="photos/cv3.jpg" alt="Flower">
+            <img class="navbor" src="photos/cv3.jpg" alt="Flower">
         </div>
     </div>
 </div>
+
