--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Erkanderon</title>
+  <title>Erkan Cetinkaya</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -44,7 +44,7 @@
           <a href="#/portfolio" class="home2">Portfolio</a>
         </div>
         <div class="div1">
-          <a href="#/cv" class="home2">CV</a>
+          <a href="#/cv" class="home2">Resume</a>
         </div>
       </div>
     </div>
