--- a/homePage/home-page-template.html
+++ b/homePage/home-page-template.html
@@ -28,3 +28,11 @@
         </div>
     </div>
 </div>
+<hr>
+<div class="what-people-are-saying">
+    <h2>WHAT PEOPLE SAYING ABOUT ME</h2>
+
+    <h2 class="altb alignleft"><p>Funny</p> <p>Sociable</p><p>Cool</p><p>Optimistic</p></h2>
+    <h2 class="altb alignright"><p>Team Player</p><p>Talented</p><p>Intelligent</p><p>Honest</p></h2>
+
+</div>
