--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <i class="fa fa-laptop"></i>
         <p><h4>Navigation</h4></p>
         <ul class="footer-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">My Works</a></li>
-          <li><a href="#">CV</a></li>
+          <li><a href="#/home">Home</a></li>
+          <li><a href="#/portfolio">My Works</a></li>
+          <li><a href="#/cv">CV</a></li>
 
         </ul>
 
@@ -74,9 +74,9 @@
         <i class="fa fa-html5"></i>
         <p><h4>Useful Links</h4></p>
         <ul class="footer-links">
-          <li><a href="#"><i class="glyphicon glyphicon-envelope"></i> erkan.cetinkaya3@gmail.com</a></li>
-          <li><a href="#"><img src="photos/github1.png"></a></li>
-          <li><a href="#"><img src="photos/link1.png"></a></li>
+          <li><a href="https://www.python.org/">Python.org</a></li>
+          <li><a href="https://developer.android.com/index.html">Android</a></li>
+          <li><a href="https://angularjs.org/">AngularJS</a></li>
 
         </ul>
       </div>
@@ -84,8 +84,8 @@
         <p><h4>Contact With Me</h4></p>
         <ul class="footer-links">
           <li><a href="#"><i class="glyphicon glyphicon-envelope"></i> erkan.cetinkaya3@gmail.com</a></li>
-          <li><a href="#"><img src="photos/github1.png"></a></li>
-          <li><a href="#"><img src="photos/link1.png"></a></li>
+          <li><a href="https://github.com/erkanderon"><img src="photos/github1.png"></a></li>
+          <li><a href="https://www.linkedin.com/in/erkan-%C3%A7etinkaya-9a03b66b?trk=hp-identity-name"><img src="photos/link1.png"></a></li>
 
         </ul>
       </div>
