--- a/homePage/home-page-template.html
+++ b/homePage/home-page-template.html
@@ -7,14 +7,9 @@
                     <img class="img-responsive img-rounded" src="photos/myPhoto2.jpg" >
                 </a>
             </div>
-            <div class="col-lg-2  col-xs-6">
-                <img class="img-responsive img-circle" src="photos/linux1.jpg">
-                <img class="img-responsive img-circle" src="photos/linux2.png">
-                <img class="img-responsive img-circle" src="photos/linux3.png">
-            </div>
-            <div class="col-lg-20  col-xs-6">
+            <div class=".col-sm-6 .col-md-5 .col-lg-6">
 
-                </div>
+                
                 <p class="myself">
                     Hi, I am <strong style="color: rgb(64, 75, 76);">Hüseyin Erkan Çetinkaya</strong>. I'm graduated from Muğla University Computer Engineering Department in Turkey.
                     I took part in a web-based development and mobile developing.
@@ -23,16 +18,12 @@
                     I'm trying to improve my coding skills and watch the Technology news to be stay up to date.
                     Linux, Python, Javascript is indispensable concepts for me.
                 </p>
-            </div>
+            
 
+            </div>
         </div>
     </div>
-</div>
-<hr>
-<div class="what-people-are-saying">
-    <h2>WHAT PEOPLE SAYING ABOUT ME</h2>
-
-    <h2 class="altb alignleft"><p>Funny</p> <p>Sociable</p><p>Cool</p><p>Optimistic</p></h2>
-    <h2 class="altb alignright"><p>Team Player</p><p>Talented</p><p>Intelligent</p><p>Honest</p></h2>
 
 </div>
+
+
