--- a/CV/CV.html
+++ b/CV/CV.html
@@ -1,4 +1,5 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -10,16 +11,17 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img class="navbor" src="photos/cv.jpg" alt="Chania">
+            <img class="navbor" src="photos/cv5.jpg" alt="Chania">
         </div>
 
         <div class="item">
-            <img class="navbor" src="photos/cv2.jpg" alt="Chania">
+            <img class="navbor" src="photos/cv6.jpg" alt="Chania">
         </div>
 
         <div class="item">
-            <img class="navbor" src="photos/cv3.jpg" alt="Flower">
+            <img class="navbor" src="photos/cv7.jpg" alt="Flower">
         </div>
     </div>
+</div>
 </div>
 
