--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/bootstrap/js/carousel.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="app.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
