--- a/homePage/home-page-template.html
+++ b/homePage/home-page-template.html
@@ -9,16 +9,16 @@
             </div>
             <div class=".col-sm-6 .col-md-5 .col-lg-6">
 
-                
-                <p class="myself">
+                <div class="container-fluid">
+                <h2 class="">
                     Hi, I am <strong style="color: rgb(64, 75, 76);">Hüseyin Erkan Çetinkaya</strong>. I'm graduated from Muğla University Computer Engineering Department in Turkey.
                     I took part in a web-based development and mobile developing.
                     Making researches from Github projects is my food, try to work with these projects is my drink.
                     I believe that sharing experiences with other developers brings a bigger world.
                     I'm trying to improve my coding skills and watch the Technology news to be stay up to date.
                     Linux, Python, Javascript is indispensable concepts for me.
-                </p>
-            
+                </h2>
+                 </div>
 
             </div>
         </div>
