--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div ng-view class="view"></div>
 
   
-  <div class="wrapper-footer">
+  <div class="wrapper-footer" id="footer">
     <div class="containerfoot">
       <footer class="footer">
         <a href="https://github.com/erkanderon"><img src="photos/github.svg" class="svg-icon"></img></a>
