--- a/homePage/home-page-template.html
+++ b/homePage/home-page-template.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container-fluid">
     <div class="col-lg-12" >
         <div class="col-lg-12 container-window">
             <div class="col-lg-4 col-xs-6 nopad">
