fixed navbar size

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">ERKAN CETİNKAYA</a>
+      <a id="navindex" class="navbar-brand" href="#">ERKAN ÇETİNKAYA</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#/home">HOME</a>
+          <a id="navindex" href="#/home">HOME</a>
         </li>
         <li>
-          <a href="#/portfolio">PORTFOLIO</a>
+          <a id="navindex" href="#/portfolio">PORTFOLIO</a>
         </li>
         <li>
-          <a href="#/cv">RESUME</a>
+          <a id="navindex" href="#/cv">RESUME</a>
         </li>
       </ul>
 
