--- a/homePage/home-page-template.html
+++ b/homePage/home-page-template.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="container">
     <div class="col-lg-12" >
         <div class="col-lg-12 container-window">
             <div class="col-lg-4 col-xs-6 nopad">
@@ -12,7 +12,7 @@
                 <div class="container-fluid">
                 <h2 class="">
                     Hi, I am <strong style="color: rgb(64, 75, 76);">Hüseyin Erkan Çetinkaya</strong>. I'm graduated from Muğla University Computer Engineering Department in Turkey.
-                    I took part in a web-based development and mobile developing.
+                    I took parts in a web-based development and mobile development projects.
                     Making researches from Github projects is my food, try to work with these projects is my drink.
                     I believe that sharing experiences with other developers brings a bigger world.
                     I'm trying to improve my coding skills and watch the Technology news to be stay up to date.
