--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
   <style>
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
-      width: 38%;
+      width: 60%;
       margin: auto;
+      margin-bottom: 150px;
     }
   </style>
 </head>
