--- a/CV/CV.html
+++ b/CV/CV.html
@@ -11,15 +11,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img class="navbor" src="photos/cv5.jpg" alt="Chania">
+            <img class="navbor" src="photos/cv5.jpg" alt="">
         </div>
 
         <div class="item">
-            <img class="navbor" src="photos/cv6.jpg" alt="Chania">
+            <img class="navbor" src="photos/cv6.jpg" alt="">
         </div>
 
         <div class="item">
-            <img class="navbor" src="photos/cv7.jpg" alt="Flower">
+            <img class="navbor" src="photos/cv7.jpg" alt="">
         </div>
     </div>
 </div>
