--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" name="navnavnav">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -47,20 +47,19 @@
     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a id="navindex" href="#/home">HOME</a>
+          <a id="navindex" class="home" href="">HOME</a>
         </li>
         <li>
-          <a id="navindex" href="#/portfolio">PORTFOLIO</a>
+          <a id="navindex" class="portfol" href="">PORTFOLIO</a>
         </li>
         <li>
-          <a id="navindex" href="#/cv">RESUME</a>
+          <a id="navindex" class="resume" href="">RESUME</a>
         </li>
       </ul>
 
     </div>
   </div>
 </nav>
-
 
 
 
@@ -80,7 +79,7 @@
       </footer>
     </div>
   </div>
-
+<a id="buttonTop" href=""><img src="photos/up.jpg" class="img-circle up-icon"></a>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
@@ -92,5 +91,7 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  <script src="components/scripts/jscript.js"></script>
+  
 </body>
 </html>
