--- a/homePage/home-page-template.html
+++ b/homePage/home-page-template.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div id="home" class="container">
     <div class="cont">
             <div class="col-sm-6 nopad">
                 <a href="#" class="">
@@ -122,16 +122,16 @@
     </div>
 </div>
 
-<div class="portfolio img-responsive">
+<div  class="portfolio img-responsive">
     <div class="content">
-        <h1>PORTFOLIO</h1>
+        <h1></h1>
     </div>
 </div>
 <div class="clear"></div>
 <div class="clear"></div>
 <div class="clear"></div>
 
-<div class="container">
+<div class="container" id="portfolio">
 <div class="row"> 
     <div class="p-container">
        
@@ -248,7 +248,7 @@
 </div>
 <div class="portfolio img-responsive">
     <div class="content">
-        <h1>RESUME</h1>
+        <h1></h1>
     </div>
 </div>
 
@@ -256,7 +256,7 @@
 <div class="clear"></div>
 <div class="clear"></div>
 
-<div class="container">
+<div class="container" id="resum">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -282,3 +282,4 @@
     </div>
 </div>
 </div>
+
